Project

General

Profile

Actions

Bug #19036

closed

rgw_file: fix recycling of invalid mkdir handles

Added by Matt Benjamin about 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

To avoid a string copy in the common mkdir path, handles for proposed buckets currently are staged in the handle table, before being rejected. They need to be destaged, not just marked deleted (because deleted objects are now assumed not to be linked, as of beaeff059375b44188160dbde8a81dd4f4f8c6eb).

This triggered an unhandled Boost assert when deleting staged handles, as current safe_link mode requires first removing from the FHCache.


Related issues 3 (0 open3 closed)

Has duplicate rgw - Bug #19060: rgw_file: avoid interning ".." in FHCache table and don't ref for themDuplicateMatt Benjamin02/23/2017

Actions
Copied to rgw - Backport #19153: jewel: rgw_file: fix recycling of invalid mkdir handlesResolvedNathan CutlerActions
Copied to rgw - Backport #19154: kraken: rgw_file: fix recycling of invalid mkdir handlesResolvedNathan CutlerActions
Actions #1

Updated by Ken Dreyer about 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Matt Benjamin about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Matt Benjamin about 7 years ago

  • Backport changed from jewel to jewel kraken
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19153: jewel: rgw_file: fix recycling of invalid mkdir handles added
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19154: kraken: rgw_file: fix recycling of invalid mkdir handles added
Actions #6

Updated by Nathan Cutler about 7 years ago

  • Related to Bug #19060: rgw_file: avoid interning ".." in FHCache table and don't ref for them added
Actions #7

Updated by Nathan Cutler about 7 years ago

  • Related to deleted (Bug #19060: rgw_file: avoid interning ".." in FHCache table and don't ref for them)
Actions #8

Updated by Nathan Cutler about 7 years ago

  • Has duplicate Bug #19060: rgw_file: avoid interning ".." in FHCache table and don't ref for them added
Actions #9

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF